--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="locales.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
