--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="theme-color" content="#3b82f6">
     <title>Ultimate Stopwatch</title>
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
+    
     <!-- Favicon for browsers (PNG recommended) -->
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
